<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways|snap" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_publisher_id" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                >

                <com.example.util.SquareImageView
                    android:id="@+id/img_gmain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_category" />

                <com.example.util.SquareImageView
                    android:id="@+id/img_gmain2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/image_play"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/black_gradient" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:paddingLeft="2dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/text_title"
                        android:layout_alignStart="@+id/text_title"
                        android:layout_below="@+id/text_title"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:padding="1dp"
                            ads:srcCompat="@drawable/ic_clock" />

                        <TextView
                            android:id="@+id/text_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:text=""
                            android:layout_gravity="center"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </RelativeLayout>

                <ImageView
                    android:id="@+id/image_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    ads:srcCompat="@drawable/ic_play" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/sec_topbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/main_sec"
                android:layout_margin="4dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardUseCompatPadding="false"
                    card_view:elevation="5dp">

                    <LinearLayout
                        android:id="@+id/sec_topbtn2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <android.support.v7.widget.CardView
                            android:id="@+id/card_view1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            card_view:cardBackgroundColor="#0064CC"
                            card_view:cardCornerRadius="2dp"
                            card_view:cardUseCompatPadding="false"
                            card_view:elevation="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:paddingBottom="2dp"
                                android:paddingTop="2dp">

                                <ImageView
                                    android:id="@+id/text_dviewimg"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:paddingTop="3dp"
                                    android:src="@drawable/ic_view" />

                                <TextView
                                    android:id="@+id/text_dview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:paddingTop="3dp"
                                    android:text=""
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/card_view2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            card_view:cardBackgroundColor="#ff4646"
                            card_view:cardCornerRadius="2dp"
                            card_view:cardUseCompatPadding="false"
                            card_view:elevation="5dp">

                            <LinearLayout
                                android:id="@+id/lay_fav"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:paddingBottom="2dp"
                                android:paddingTop="2dp">

                                <ImageView
                                    android:id="@+id/text_dfavimg"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:paddingTop="3dp"
                                    android:src="@drawable/fav" />

                                <TextView
                                    android:id="@+id/text_dfav"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:paddingTop="3dp"
                                    android:text="LIKE"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/card_view3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            card_view:cardBackgroundColor="@color/btn_3"
                            card_view:cardCornerRadius="2dp"
                            card_view:cardUseCompatPadding="false"
                            card_view:elevation="5dp">

                            <LinearLayout
                                android:id="@+id/lay_share"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:paddingBottom="2dp"
                                android:paddingTop="2dp">

                                <ImageView
                                    android:id="@+id/text_dshareimg"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:paddingTop="3dp"
                                    android:src="@drawable/ic_share" />

                                <TextView
                                    android:id="@+id/text_dshare"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:paddingTop="3dp"
                                    android:text="@string/detail_share"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/sec_descmain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/main_sec">

                <LinearLayout
                    android:id="@+id/sec_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/white"
                        card_view:cardUseCompatPadding="false"
                        card_view:elevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_titleingre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="2dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="5dp"
                                android:paddingTop="5dp"
                                android:text="@string/detail_ingredient"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <View
                                android:id="@+id/view2"
                                android:layout_width="25dp"
                                android:layout_height="1dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/btn_3" />

                            <WebView
                                android:id="@+id/desweb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:background="@color/white" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sec_descdir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/sec_desc"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_descdire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/white"
                        card_view:cardUseCompatPadding="false"
                        card_view:elevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_titledir"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="2dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="5dp"
                                android:paddingTop="5dp"
                                android:text="@string/detail_direction"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <View
                                android:id="@+id/view2dir"
                                android:layout_width="25dp"
                                android:layout_height="1dp"
                                android:layout_marginLeft="10dp"
                                android:background="@color/btn_3" />

                            <WebView
                                android:id="@+id/desdire"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:background="@color/white" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>